--- a/index.html
+++ b/index.html
@@ -8,17 +8,20 @@
 </head>
 <body>
 <header>
-  <a href=""><span>Web</span><span>Studio</span></a>
   <nav>
-   <ul>
+<!--огорни вебстудіо в спан-->
+  <a href="./index.html">WebStudio</a>
+  <ul>
     <li><a href="">Studio</a></li>
     <li><a href="">Portfolio</a></li>
     <li><a href="">Contacts</a></li>
    </ul>
   </nav>
   <address>
-    <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-    <a href="tell:+110001111111">+11 (000) 111-11-11</a>
+    <ul>
+    <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+    <li><a href="tell:+110001111111">+11 (000) 111-11-11</a></li>
+    </ul>
   </address>
 </header>
 
@@ -62,9 +65,9 @@
 <section>
   <h2>What are we doing</h2>
    <ul>
-    <li><img src="./images/example-1.jpg" alt="display with statistics"></li>
-    <li><img src="./images/example-2.jpg" alt="phone display with chat rooms"></li>
-    <li><img src="./images/example-3.jpg" alt="connecting phone with monitor"></li>
+    <li><img src="./images/example-1.jpg" alt="display with statistics" width="360"></li>
+    <li><img src="./images/example-2.jpg" alt="phone display with chat rooms" width="360"></li>
+    <li><img src="./images/example-3.jpg" alt="connecting phone with monitor" width="360"></li>
    </ul>
 </section>
 <!--Our Team-->
@@ -72,22 +75,22 @@
     <h2>Our Team</h2>
     <ul>
         <li>
-            <img src="./images/mark-guerrero-1.jpg" alt="Mark Guerrero">
+            <img src="./images/mark-guerrero-1.jpg" alt="Mark Guerrero" width="264">
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
         </li>
         <li>
-            <img src="./images/tom-ford-2.jpg" alt="Tom Ford">
+            <img src="./images/tom-ford-2.jpg" alt="Tom Ford" width="264">
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
         </li>
         <li>
-            <img src="./images/camila-garcia-3.jpg" alt="Camila Garcia">
+            <img src="./images/camila-garcia-3.jpg" alt="Camila Garcia" width="264">
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
         </li>
         <li>
-            <img src="./images/daniel-wilson-4.jpg" alt="Daniel Wilson">
+            <img src="./images/daniel-wilson-4.jpg" alt="Daniel Wilson" width="264">
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
         </li>
@@ -95,9 +98,10 @@
 </section>
 </main>
 
-<footer></footer>
-<a href=""><span>Web</span><span>Studio</span></a>
-<p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.
-</p>
+<footer>
+<!--огорни спаном лого-->
+<a href="./index.html">WebStudio</a>
+<p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+</footer>
 </body>
 </html>
